Add scrollbar styles in css

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,21 @@
 textarea::-webkit-scrollbar {
   width: 0;
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-track {
+  background: #ecfdf5;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #065f46;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #044933;
+}
